add_executable(run_many_files_mmap_bench run_many_files_mmap_bench.cpp)
add_executable(verify_mmap verify_mmap.cpp)

find_package(OpenMP)
if (OPENMP_FOUND)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    add_executable(verify_mmap_openmp verify_mmap_openmp.cpp)
else ()
    MESSAGE(WARNING "OpenMP is not found. Does not buid verify_mmap_openmp.")
endif ()